# omnissiatac

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml.example  docker-compose.yml  omnissiah  omnissiatac  run.sh
src/: common.rs  config.rs  error.rs  llm.rs  main.rs  music.rs  news.rs  playlist.rs  slop.rs  tts.rs  web.rs
static/: index.html  style.css
