[package]
name = "omnissiatac"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
lavalink-rs = { version = "0.15.0", features = ["serenity", "songbird", "macros"] }
songbird = { version = "0.5.0", features = ["serenity"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15"
serde_json = "1"
dashmap = "6"
thiserror = "2.0.18"
anyhow = "1.0.102"
urlencoding = "2.1.3"
whatlang = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["fs"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.38", features = ["aws-lc-rs"] }
rand = "0.10.1"
argon2 = "0.5.3"
